--- a/templates/itinerary.html
+++ b/templates/itinerary.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-md-8">
           <h3>{{ destination }}</h3>
-          <p class="text-muted">
+          <p class="text">
             <i class="fas fa-calendar-day me-1"></i> {{ days }} day{% if days !=
             1 %}s{% endif %} | <i class="fas fa-wallet me-1"></i> {{ budget }}
             budget | <i class="fas fa-star me-1"></i> {{ theme }} theme
@@ -40,7 +40,7 @@
             <h5>Evening</h5>
             <p>{{ day.evening }}</p>
             <h5>Estimated Cost</h5>
-            <p>{{ day.estimated_cost_in_dollars }}</p>
+            <p>{{ day.estimated_cost_in_dollars }}<span>&dollar;</span></p>
           </div>
         </div>
         {% endfor %} {% else %}
