--- a/templates/layout.html
+++ b/templates/layout.html
@@ -145,7 +145,7 @@
             </div>
 
             <div class="footer-section">
-              <h4>Contact Us</h4>
+              <h4>Contact Me</h4>
               <div class="contact-info">
                 <p>
                   <i class="fas fa-envelope"></i> divyanshbangwal04@gmail.com
@@ -158,12 +158,12 @@
             </div>
 
             <div class="footer-section">
-              <h4>Follow Us</h4>
+              <h4>Follow Me</h4>
               <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/divyanshbangwal_02/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/divyansh-bangwal-1aa1a2356/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Divyansh044"><i class="fab fa-github"></i></a>
+
               </div>
             </div>
           </div>
